2008-06-09 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/single.cgi, performance.cgi, graphs.cgi, status.cgi
	  & scoring.cgi: Fixed to handle new LT node agent endpoint.

2008-05-30 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/*: Fixes for iPod stuff
	
	* www/istar/*: Just dpon't ask!
	
	* eSTAR/Observation.pm: Fixes for non-scored observation requests
	
	* eSTAR/UA/Handler.pm: Fixed all_telescopes() so it doesn't score.

2008-05-29 Alasdair Allan <aa@astro.ex.ac.uk>

        * Massive changes to www/istar/* and www/robonet-1.0/*

	* eSTAR/UA/Handler.pm: Added node message to QUEUED OK. This is
	  going to break lots of stuff I've forgotten about I think?
	
2008-05-28 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_bridge.pl: Bridges event messages from a vanilla TCP 
	  server to eSTAR-like SOAP server.

	* Fixed massive problem with CVS check-in of www/istar/*
	
2008-05-27 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/ogle_fetch_v2.pl: Fixed.

	* startup/cron/ogle_fetch: Script for cron'd running

2008-05-23 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/ogle_fetch_v2.pl: Updated for new PLOP

        * www/robonet-1.0/*: Added Colin Snodgrass

2008-05-16 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/istar/*: Big update, working ongoing.

        * www/robonet-1.0/cgi-bin/graphs.cgi: Google Chart version of the
	  performance.cgi sript. Meant to be consumed by the istar stuff.

2008-05-14 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/istar/*: Big update, working ongoing.

2008-05-13 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/count.cgi & single.cgi: Incremental query
	  tools into the Microlensing UA backend.
	  
2008-04-29 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_servers.pl & bin/test_servers_gsm.pl: Added Brad as a contact
	  for UKIRT and changed pinging for www.estar.org.uk to poll webserver
	  
2008-04-09 Alasdair Allan <aa@astro.ex.ac.uk>
